# OpenSpeedRun

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
.github/workflows/deployment/release/freebsd/: action.yml
.github/workflows/deployment/release/linux/: action.yml
.github/workflows/deployment/release/macos/: action.yml
.github/workflows/deployment/release/windows/: action.yml
assets/desktop/: openspeedrun-cfg.desktop  openspeedrun.cfg.desktop  openspeedrun.desktop
assets/shaders/bacterium/: bacterium.glsl
assets/shaders/clouds/: clouds.glsl
assets/shaders/conjuring/: conjuring.glsl
assets/shaders/fog/: fog.glsl
assets/shaders/kirby/: kirby.glsl  kirby.glsl.vert
assets/shaders/landscape/: landscape.glsl
assets/shaders/lines/: lines.glsl  lines.glsl.vert
assets/shaders/orange/: orange.glsl
assets/shaders/retrowave/: retrowave.glsl
assets/shaders/space/: space.glsl
assets/shaders/threads/: threads.glsl
assets/shaders/vortex/: vortex.glsl  vortex.glsl.vert
assets/shaders/waves/: waves.glsl
docs/: SHADERS.md
exampleconfig/: config.json  overlay.html
exampleconfig/shaders/: lava.glsl  lava.glsl.vert  neon.glsl  rainbow.glsl  water.glsl  water.glsl.vert
exampleconfig/splits/example/: split.json
exampleconfig/splits/smb3any/: split.json
exampleconfig/splits/smb3anynoww/: split.json
exampleconfig/themes/: default.json  mario3.json
splits/: example.json
src/: gui.rs  lib.rs  main.rs  speedrun_com.rs  therun_gg.rs
src/app/: fonts.rs  footer.rs  graph.rs  header.rs  help_window.rs  mod.rs  overlay.rs  resize.rs  splits_panel.rs  state.rs  texture.rs  update.rs  websocket_server.rs
src/autosplitter/: config.rs  main.rs  mod.rs  process_memory.rs  retroarch.rs
src/cfg/: dialog.rs  history.rs  main.rs  shader_editor.rs  speedrun_com_picker.rs  split_editor.rs  style.rs  syntax.rs  theme_editor.rs
src/cli/: main.rs
src/config/: keys.rs  layout.rs  load.rs  mod.rs  shaders.rs
src/core/: mod.rs  server.rs  split.rs  timer.rs  winserver.rs
src/formats/: csv.rs  lss.rs  mod.rs  native.rs  time.rs
tests/: autosplitter.rs  csv_export.rs  graph.rs  lss_format.rs  overlay.rs  split.rs  timer.rs  websocket_server.rs
