[package]
name = "open_speed_run"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "openspeedrun"
path = "src/main.rs"

[[bin]]
name = "openspeedrun-cli"
path = "src/cli/main.rs"

[[bin]]
name = "openspeedrun-cfg"
path = "src/cfg/main.rs"

[[bin]]
name = "openspeedrun-autosplitter"
path = "src/autosplitter/main.rs"

[lib]
name = "openspeedrun"
path = "src/lib.rs"

[dependencies]
bytemuck = "1.14"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
eframe = {version = "0.34", features = ["glow"] }
egui = "0.34"
egui_extras = { version = "0.34", features = ["syntect"] }
egui-phosphor = "0.12"
image = "0.25"
include_dir = "0.7"
quick-xml = { version = "0.41", features = ["encoding"] }
rfd = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
syntect = { version = "5.0", features = ["yaml-load"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
ureq = { version = "3", features = ["json"] }

[target.'cfg(windows)'.dependencies]
named_pipe = "0.4.1"
rdev = "0.5"
winapi = { version = "0.3", features = ["winbase"] }